# blastoff

./: BlastoffPP.sln  BlastoffPP.vcxproj  BlastoffPP.vcxproj.filters  CMakeLists.txt  compile-debug.sh  compile-release.sh  emscriptenLink.sh  readme.md  run-debug.sh  run-release.sh
source/: BlastOffpp.cpp  Debug.h  Enums.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  Graphics.cpp  Graphics.h  InputManager.cpp  InputManager.h  JSONDefs.h  Logging.cpp  Logging.h  MainMenu.cpp  MainMenu.h  OperatingSystem.cpp  OperatingSystem.h  PlayableGame.cpp  Player.cpp  Player.h  Powerup.cpp  Powerup.h  Program.cpp  Program.h  ProgramConfiguration.cpp  ProgramConfiguration.h  ProgramConstants.cpp  ProgramConstants.h  Props.cpp  Props.h  Settings.cpp  Settings.h  Sound.cpp  Sound.h  Utils.cpp  Utils.h
